# qrdar

./: README.md  find_markers.ipynb
markers/: create_markers.ipynb
qrdar/: __init__.py  aruco_mip_16h3_dict.npy  aruco_mip_36h12_dict.npy  common.py  extractFeatures.py  locateTargets.py  otherFunctions.py  pcd_io.py  readMarker.py  search4stickers.py
qrdar/io/: __init__.py  ply_io.py
qrdar/scripts/: identify_codes.py
src/: CMakeLists.txt  mon2pcd.cpp  mon2pcd_refl.cpp  rxp2pcd_loc.cpp  rxp2pcd_refl.cpp
